--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "nodemon": "^3.0.1",
     "prisma": "^5.3.1"
   }
